// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchAppEngineApplication should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-711888229551-us-central1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "cors": Array [
              Object {
                "method": Array [
                  "GET",
                ],
                "origin": Array [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": true,
                "lockedTime": "2021-05-19T00:04:30.131Z",
              },
              "uniformBucketLevelAccess": Object {
                "enabled": true,
                "lockedTime": "2021-05-19T00:04:30.131Z",
              },
            },
            "id": "gcf-sources-711888229551-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-711888229551-us-central1",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-711888229551-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:04:30.131Z",
            "updated": "2021-02-18T00:04:30.131Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613606670131,
      "displayName": "gcf-sources-711888229551-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-711888229551-us-central1",
      "location": "US-CENTRAL1",
      "name": "gcf-sources-711888229551-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1613606670131,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-711888229551-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2-sink-logging-bucket",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2-sink-logging-bucket",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:31:30.869Z",
            "updated": "2021-02-18T00:31:30.869Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613608290869,
      "displayName": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "location": "US",
      "name": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613608290869,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-09T14:10:10.943Z",
            "updated": "2021-03-09T14:10:10.943Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1615299010943,
      "displayName": "j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2.appspot.com",
      "location": "US",
      "name": "j1-gc-integration-dev-v2.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1615299010943,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2cloudfunctions",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2cloudfunctions",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-17T23:05:05.322Z",
            "updated": "2021-02-17T23:05:05.322Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613603105322,
      "displayName": "j1-gc-integration-dev-v2cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2cloudfunctions",
      "location": "US",
      "name": "j1-gc-integration-dev-v2cloudfunctions",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613603105322,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:staging.j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "staging.j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "lifecycle": Object {
              "rule": Array [
                Object {
                  "action": Object {
                    "type": "Delete",
                  },
                  "condition": Object {
                    "age": 15,
                  },
                },
              ],
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "staging.j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/staging.j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-09T14:10:10.941Z",
            "updated": "2021-03-09T14:10:10.941Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1615299010941,
      "displayName": "staging.j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "staging.j1-gc-integration-dev-v2.appspot.com",
      "location": "US",
      "name": "staging.j1-gc-integration-dev-v2.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1615299010941,
      "webLink": "https://console.cloud.google.com/storage/browser/staging.j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:test-bucket-with-labels",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "defaultEventBasedHold": false,
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": true,
                "lockedTime": "2021-06-16T00:15:34.452Z",
              },
              "uniformBucketLevelAccess": Object {
                "enabled": true,
                "lockedTime": "2021-06-16T00:15:34.452Z",
              },
            },
            "id": "test-bucket-with-labels",
            "kind": "storage#bucket",
            "labels": Object {
              "my-label-test": "testing",
              "my-label-test-2": "testing2",
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "test-bucket-with-labels",
            "projectNumber": "711888229551",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/test-bucket-with-labels",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-18T00:15:34.452Z",
            "updated": "2021-03-18T00:15:34.452Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1616026534452,
      "displayName": "test-bucket-with-labels",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "test-bucket-with-labels",
      "location": "US",
      "name": "test-bucket-with-labels",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "tag.my-label-test": "testing",
      "tag.my-label-test-2": "testing2",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1616026534452,
      "webLink": "https://console.cloud.google.com/storage/browser/test-bucket-with-labels;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:25:22.127Z",
            "updated": "2021-02-18T00:25:22.127Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613607922127,
      "displayName": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613607922127,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": Object {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "USES",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|uses|bucket:j1-gc-integration-dev-v2.appspot.com",
      "_toEntityKey": "bucket:j1-gc-integration-dev-v2.appspot.com",
      "_type": "google_app_engine_application_uses_storage_bucket",
      "displayName": "USES",
    },
    Object {
      "_class": "USES",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|uses|bucket:staging.j1-gc-integration-dev-v2.appspot.com",
      "_toEntityKey": "bucket:staging.j1-gc-integration-dev-v2.appspot.com",
      "_type": "google_app_engine_application_uses_storage_bucket",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": Array [
    "google_storage_bucket",
    "google_app_engine_application",
    "google_app_engine_application_uses_storage_bucket",
  ],
  "numCollectedEntities": 8,
  "numCollectedRelationships": 2,
}
`;

exports[`#fetchAppEngineInstances should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": Object {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Container",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "default",
            "name": "apps/j1-gc-integration-dev-v2/services/default",
            "split": Object {
              "allocations": Object {
                "20210319t163820": 1,
              },
            },
          },
        },
      ],
      "_type": "google_app_engine_service",
      "createdOn": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default",
      "id": "default",
      "name": "apps/j1-gc-integration-dev-v2/services/default",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-03-09T14:11:25Z",
            "createdBy": "viragsf@gmail.com",
            "diskUsageBytes": "4027054",
            "env": "standard",
            "id": "20210309t141022",
            "instanceClass": "F1",
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
            "network": Object {},
            "runtime": "nodejs14",
            "runtimeChannel": "default",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": Array [
        "application",
      ],
      "cpuCount": undefined,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1615299085000,
      "diskGb": undefined,
      "diskUsageBytes": 4027054,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "env": "standard",
      "id": "20210309t141022",
      "instanceClass": "F1",
      "livenessCheckFailureThreshold": undefined,
      "livenessCheckInitialDelay": undefined,
      "livenessCheckInterval": undefined,
      "livenessCheckSuccessThreshold": undefined,
      "livenessCheckTimeout": undefined,
      "manualScalingInstances": undefined,
      "memoryGb": undefined,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "readinessCheckAppStartTimeout": undefined,
      "readinessCheckFailureThreshold": undefined,
      "readinessCheckInterval": undefined,
      "readinessCheckSuccessThreshold": undefined,
      "readinessCheckTimeout": undefined,
      "runtime": "nodejs14",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "betaSettings": Object {
              "has_docker_image": "true",
              "module_yaml_path": "app.yaml",
              "no_appserver_affinity": "true",
              "use_deployment_manager": "true",
            },
            "createTime": "2021-03-19T15:39:33Z",
            "createdBy": "viragsf@gmail.com",
            "env": "flexible",
            "id": "20210319t163820",
            "livenessCheck": Object {
              "checkInterval": "30s",
              "failureThreshold": 4,
              "initialDelay": "300s",
              "successThreshold": 2,
              "timeout": "4s",
            },
            "manualScaling": Object {
              "instances": 1,
            },
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
            "network": Object {},
            "readinessCheck": Object {
              "appStartTimeout": "300s",
              "checkInterval": "5s",
              "failureThreshold": 2,
              "successThreshold": 2,
              "timeout": "4s",
            },
            "resources": Object {
              "cpu": 1,
              "diskGb": 10,
              "memoryGb": 0.5,
            },
            "runtime": "nodejs",
            "runtimeApiVersion": "1.0",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": Array [
        "application",
      ],
      "cpuCount": 1,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1616168373000,
      "diskGb": 10,
      "diskUsageBytes": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "env": "flexible",
      "id": "20210319t163820",
      "instanceClass": undefined,
      "livenessCheckFailureThreshold": 4,
      "livenessCheckInitialDelay": "300s",
      "livenessCheckInterval": "30s",
      "livenessCheckSuccessThreshold": 2,
      "livenessCheckTimeout": "4s",
      "manualScalingInstances": 1,
      "memoryGb": 0.5,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "readinessCheckAppStartTimeout": "300s",
      "readinessCheckFailureThreshold": 2,
      "readinessCheckInterval": "5s",
      "readinessCheckSuccessThreshold": 2,
      "readinessCheckTimeout": "4s",
      "runtime": "nodejs",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Host",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "aef-default-20210319t163820-mlt8",
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
            "startTime": "2021-03-19T15:40:34.735Z",
            "vmIp": "34.123.65.83",
            "vmLiveness": "HEALTHY",
            "vmStatus": "RUNNING",
          },
        },
      ],
      "_type": "google_app_engine_instance",
      "appEngineRelease": undefined,
      "availability": undefined,
      "averageLatency": undefined,
      "createdOn": 1616168434735,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "id": "aef-default-20210319t163820-mlt8",
      "memoryUsage": undefined,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "requests": undefined,
      "vmIp": "34.123.65.83",
      "vmLiveness": "HEALTHY",
      "vmStatus": "RUNNING",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|has|apps/j1-gc-integration-dev-v2/services/default",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_type": "google_app_engine_application_has_service",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    Object {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
        "targetEntity": Object {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    Object {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
        "targetEntity": Object {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820/instances/aef-default-20210319t163820-mlt8",
      "_type": "google_app_engine_version_has_instance",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "google_app_engine_application",
    "google_app_engine_service",
    "google_app_engine_application_has_service",
    "google_app_engine_version",
    "google_app_engine_service_has_version",
    "mapping_source_created_google_user",
    "google_app_engine_instance",
    "google_app_engine_version_has_instance",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 6,
}
`;

exports[`#fetchAppEngineServices should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": Object {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Container",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "default",
            "name": "apps/j1-gc-integration-dev-v2/services/default",
            "split": Object {
              "allocations": Object {
                "20210309t141022": 1,
              },
            },
          },
        },
      ],
      "_type": "google_app_engine_service",
      "createdOn": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default",
      "id": "default",
      "name": "apps/j1-gc-integration-dev-v2/services/default",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|has|apps/j1-gc-integration-dev-v2/services/default",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_type": "google_app_engine_application_has_service",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "google_app_engine_application",
    "google_app_engine_service",
    "google_app_engine_application_has_service",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchAppEngineVersions should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "roles/owner",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "roles/owner",
            "title": "roles/owner",
          },
        },
      ],
      "_type": "google_iam_role",
      "createdOn": undefined,
      "custom": false,
      "deleted": false,
      "description": undefined,
      "displayName": "roles/owner",
      "etag": undefined,
      "name": "roles/owner",
      "permissions": undefined,
      "readonly": true,
      "stage": undefined,
    },
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "apps/j1-gc-integration-dev-v2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "authDomain": "gmail.com",
            "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
            "databaseType": "CLOUD_DATASTORE_COMPATIBILITY",
            "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
            "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
            "featureSettings": Object {
              "splitHealthChecks": true,
              "useContainerOptimizedOs": true,
            },
            "gcrDomain": "us.gcr.io",
            "id": "j1-gc-integration-dev-v2",
            "locationId": "us-central",
            "name": "apps/j1-gc-integration-dev-v2",
            "servingStatus": "SERVING",
          },
        },
      ],
      "_type": "google_app_engine_application",
      "authDomain": "gmail.com",
      "codeBucket": "staging.j1-gc-integration-dev-v2.appspot.com",
      "createdOn": undefined,
      "defaultBucket": "j1-gc-integration-dev-v2.appspot.com",
      "defaultHostname": "j1-gc-integration-dev-v2.uc.r.appspot.com",
      "displayName": "apps/j1-gc-integration-dev-v2",
      "grcDomain": "us.gcr.io",
      "id": "j1-gc-integration-dev-v2",
      "location": "us-central",
      "name": "apps/j1-gc-integration-dev-v2",
      "servingStatus": "SERVING",
      "splitHealthChecks": true,
      "useContainerOptimizedOs": true,
      "webLink": "https://console.cloud.google.com/appengine?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Container",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "default",
            "name": "apps/j1-gc-integration-dev-v2/services/default",
            "split": Object {
              "allocations": Object {
                "20210319t163820": 1,
              },
            },
          },
        },
      ],
      "_type": "google_app_engine_service",
      "createdOn": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default",
      "id": "default",
      "name": "apps/j1-gc-integration-dev-v2/services/default",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-03-09T14:11:25Z",
            "createdBy": "viragsf@gmail.com",
            "diskUsageBytes": "4027054",
            "env": "standard",
            "id": "20210309t141022",
            "instanceClass": "F1",
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
            "network": Object {},
            "runtime": "nodejs14",
            "runtimeChannel": "default",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": Array [
        "application",
      ],
      "cpuCount": undefined,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1615299085000,
      "diskGb": undefined,
      "diskUsageBytes": 4027054,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "env": "standard",
      "id": "20210309t141022",
      "instanceClass": "F1",
      "livenessCheckFailureThreshold": undefined,
      "livenessCheckInitialDelay": undefined,
      "livenessCheckInterval": undefined,
      "livenessCheckSuccessThreshold": undefined,
      "livenessCheckTimeout": undefined,
      "manualScalingInstances": undefined,
      "memoryGb": undefined,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "readinessCheckAppStartTimeout": undefined,
      "readinessCheckFailureThreshold": undefined,
      "readinessCheckInterval": undefined,
      "readinessCheckSuccessThreshold": undefined,
      "readinessCheckTimeout": undefined,
      "runtime": "nodejs14",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210309t141022-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "betaSettings": Object {
              "has_docker_image": "true",
              "module_yaml_path": "app.yaml",
              "no_appserver_affinity": "true",
              "use_deployment_manager": "true",
            },
            "createTime": "2021-03-19T15:39:33Z",
            "createdBy": "viragsf@gmail.com",
            "env": "flexible",
            "id": "20210319t163820",
            "livenessCheck": Object {
              "checkInterval": "30s",
              "failureThreshold": 4,
              "initialDelay": "300s",
              "successThreshold": 2,
              "timeout": "4s",
            },
            "manualScaling": Object {
              "instances": 1,
            },
            "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
            "network": Object {},
            "readinessCheck": Object {
              "appStartTimeout": "300s",
              "checkInterval": "5s",
              "failureThreshold": 2,
              "successThreshold": 2,
              "timeout": "4s",
            },
            "resources": Object {
              "cpu": 1,
              "diskGb": 10,
              "memoryGb": 0.5,
            },
            "runtime": "nodejs",
            "runtimeApiVersion": "1.0",
            "servingStatus": "SERVING",
            "threadsafe": true,
            "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
          },
        },
      ],
      "_type": "google_app_engine_version",
      "category": Array [
        "application",
      ],
      "cpuCount": 1,
      "createdBy": "viragsf@gmail.com",
      "createdOn": 1616168373000,
      "diskGb": 10,
      "diskUsageBytes": undefined,
      "displayName": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "env": "flexible",
      "id": "20210319t163820",
      "instanceClass": undefined,
      "livenessCheckFailureThreshold": 4,
      "livenessCheckInitialDelay": "300s",
      "livenessCheckInterval": "30s",
      "livenessCheckSuccessThreshold": 2,
      "livenessCheckTimeout": "4s",
      "manualScalingInstances": 1,
      "memoryGb": 0.5,
      "name": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "readinessCheckAppStartTimeout": "300s",
      "readinessCheckFailureThreshold": 2,
      "readinessCheckInterval": "5s",
      "readinessCheckSuccessThreshold": 2,
      "readinessCheckTimeout": "4s",
      "runtime": "nodejs",
      "servingStatus": "SERVING",
      "threadsafe": true,
      "versionUrl": "https://20210319t163820-dot-j1-gc-integration-dev-v2.appspot.com",
      "webLink": "https://console.cloud.google.com/appengine/versions?serviceId=default&project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "ASSIGNED",
      "_key": "roles/owner|assigned|REVERSE:_type=google_user:email=austin.kelleher@jupiterone.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "roles/owner",
        "targetEntity": Object {
          "_type": "google_user",
          "deleted": false,
          "email": "austin.kelleher@jupiterone.com",
          "username": "austin.kelleher@jupiterone.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_assigned_google_user",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_key": "roles/owner|assigned|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "roles/owner",
        "targetEntity": Object {
          "_type": "google_user",
          "deleted": false,
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_assigned_google_user",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2",
      "_key": "apps/j1-gc-integration-dev-v2|has|apps/j1-gc-integration-dev-v2/services/default",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_type": "google_app_engine_application_has_service",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    Object {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210309t141022",
        "targetEntity": Object {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "apps/j1-gc-integration-dev-v2/services/default",
      "_key": "apps/j1-gc-integration-dev-v2/services/default|has|apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_toEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
      "_type": "google_app_engine_service_has_version",
      "displayName": "HAS",
    },
    Object {
      "_class": "CREATED",
      "_key": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820|created|REVERSE:_type=google_user:email=viragsf@gmail.com",
      "_mapping": Object {
        "relationshipDirection": "REVERSE",
        "skipTargetCreation": false,
        "sourceEntityKey": "apps/j1-gc-integration-dev-v2/services/default/versions/20210319t163820",
        "targetEntity": Object {
          "_type": "google_user",
          "email": "viragsf@gmail.com",
          "username": "viragsf@gmail.com",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "email",
          ],
        ],
      },
      "_type": "mapping_source_created_google_user",
      "displayName": "CREATED",
    },
  ],
  "encounteredTypes": Array [
    "google_iam_role",
    "mapping_source_assigned_google_user",
    "google_app_engine_application",
    "google_app_engine_service",
    "google_app_engine_application_has_service",
    "google_app_engine_version",
    "google_app_engine_service_has_version",
    "mapping_source_created_google_user",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 7,
}
`;
